Controladores arreglados.