@@ -3,6 +3,8 @@ package com.oreofactory.oreofactory.service;
 import com.oreofactory.oreofactory.config.AIProperties;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
@@ -15,31 +17,21 @@ import java.util.Map;
 @RequiredArgsConstructor
 public class GitHubModelsService {
 
+    @Qualifier("AIProperties") // Especifica el bean correcto
     private final AIProperties aiProperties;
     private final RestTemplate restTemplate;
 
+    @SuppressWarnings("unchecked")
     public String generateSummary(SalesAggregationService.SalesAggregates aggregates) {
         try {
-            String prompt = String.format(
-                    "Con estos datos de ventas de Oreo: totalUnits=%d, totalRevenue=%.2f, topSku=%s, topBranch=%s. " +
-                            "Devuelve un resumen ejecutivo claro y conciso de máximo 120 palabras en español, " +
-                            "destacando los puntos más importantes para la gerencia.",
-                    aggregates.getTotalUnits(), aggregates.getTotalRevenue(), aggregates.getTopSku(), aggregates.getTopBranch()
-            );
+            String prompt = """
+                    Con estos datos de ventas de Oreo: totalUnits=%d, totalRevenue=%.2f, topSku=%s, topBranch=%s.
+                    Devuelve un resumen ejecutivo claro y conciso de máximo 120 palabras en español,
+                    destacando los puntos más importantes para la gerencia."""
+                    .formatted(aggregates.getTotalUnits(), aggregates.getTotalRevenue(),
+                            aggregates.getTopSku(), aggregates.getTopBranch());
 
-            Map<String, Object> requestBody = Map.of(
-                    "model", aiProperties.getDefaultModel(),
-                    "messages", List.of(
-                            Map.of(
-                                    "role", "system",
-                                    "content", "Eres un analista de negocios experto que escribe resúmenes ejecutivos breves, " +
-                                            "claros y accionables para emails corporativos. Usa un tono profesional pero accesible."
-                            ),
-                            Map.of("role", "user", "content", prompt)
-                    ),
-                    "max_tokens", 200,
-                    "temperature", 0.7
-            );
+            Map<String, Object> requestBody = createRequestBody(prompt);
 
             HttpHeaders headers = new HttpHeaders();
             headers.setContentType(MediaType.APPLICATION_JSON);
@@ -50,8 +42,9 @@ public class GitHubModelsService {
             log.info("Calling AI endpoint: {} with model: {}",
                     aiProperties.getEndpoint(), aiProperties.getDefaultModel());
 
-            ResponseEntity<Map> response = restTemplate.exchange(
-                    aiProperties.getEndpoint(), HttpMethod.POST, entity, Map.class);
+            ResponseEntity<Map<String, Object>> response = restTemplate.exchange(
+                    aiProperties.getEndpoint(), HttpMethod.POST, entity,
+                    new ParameterizedTypeReference<Map<String, Object>>() {});
 
             if (response.getStatusCode() == HttpStatus.OK && response.getBody() != null) {
                 String summary = extractContentFromResponse(response.getBody());
@@ -67,19 +60,35 @@ public class GitHubModelsService {
         }
     }
 
+    private Map<String, Object> createRequestBody(String prompt) {
+        return Map.of(
+                "model", aiProperties.getDefaultModel(),
+                "messages", List.of(
+                        Map.of(
+                                "role", "system",
+                                "content", """
+                                        Eres un analista de negocios experto que escribe resúmenes ejecutivos breves,
+                                        claros y accionables para emails corporativos. Usa un tono profesional pero accesible."""
+                        ),
+                        Map.of("role", "user", "content", prompt)
+                ),
+                "max_tokens", 200,
+                "temperature", 0.7
+        );
+    }
+
+    @SuppressWarnings("unchecked")
     private String extractContentFromResponse(Map<String, Object> response) {
         try {
-            // Estructura esperada para GitHub Models API
             List<Map<String, Object>> choices = (List<Map<String, Object>>) response.get("choices");
             if (choices != null && !choices.isEmpty()) {
-                Map<String, Object> firstChoice = choices.get(0);
+                Map<String, Object> firstChoice = choices.getFirst();
                 Map<String, Object> message = (Map<String, Object>) firstChoice.get("message");
                 if (message != null) {
                     return (String) message.get("content");
                 }
             }
 
-            // Alternativa: buscar directamente en la respuesta
             if (response.containsKey("content")) {
                 return (String) response.get("content");
             }
@@ -96,11 +105,10 @@ public class GitHubModelsService {
             return "El resumen generado está vacío.";
         }
 
-        // Validar longitud máxima (120 palabras)
         String[] words = summary.split("\\s+");
         if (words.length > 120) {
             StringBuilder trimmed = new StringBuilder();
-            for (int i = 0; i < 120 && i < words.length; i++) {
+            for (int i = 0; i < 120; i++) {
                 trimmed.append(words[i]).append(" ");
             }
             return trimmed.toString().trim() + "... [resumen truncado]";
@@ -110,24 +118,28 @@ public class GitHubModelsService {
     }
 
     private String generateFallbackSummary(SalesAggregationService.SalesAggregates aggregates) {
-        return String.format(
-                "**Resumen Semanal de Ventas Oreo**\n\n" +
-                        "**Resultados Destacados:**\n" +
-                        "• Unidades vendidas: %d unidades\n" +
-                        "• Ingresos totales: $%.2f\n" +
-                        "• Producto más popular: %s\n" +
-                        "• Sucursal líder: %s\n\n" +
-                        "**Análisis:** Las ventas muestran un desempeño sólido esta semana, " +
-                        "con %s liderando las preferencias de los clientes. La sucursal %s " +
-                        "destacó como la más productiva. Se recomienda mantener el inventario " +
-                        "adecuado del SKU más vendido y replicar las mejores prácticas de la sucursal líder.\n\n" +
-                        "Este es un resumen automático generado por el sistema.",
-                aggregates.getTotalUnits(),
-                aggregates.getTotalRevenue(),
-                aggregates.getTopSku(),
-                aggregates.getTopBranch(),
-                aggregates.getTopSku(),
-                aggregates.getTopBranch()
-        );
+        return """
+                **Resumen Semanal de Ventas Oreo**
+                
+                **Resultados Destacados:**
+                • Unidades vendidas: %d unidades
+                • Ingresos totales: $%.2f
+                • Producto más popular: %s
+                • Sucursal líder: %s
+                
+                **Análisis:** Las ventas muestran un desempeño sólido esta semana,
+                con %s liderando las preferencias de los clientes. La sucursal %s
+                destacó como la más productiva. Se recomienda mantener el inventario
+                adecuado del SKU más vendido y replicar las mejores prácticas de la sucursal líder.
+                
+                Este es un resumen automático generado por el sistema."""
+                .formatted(
+                        aggregates.getTotalUnits(),
+                        aggregates.getTotalRevenue(),
+                        aggregates.getTopSku(),
+                        aggregates.getTopBranch(),
+                        aggregates.getTopSku(),
+                        aggregates.getTopBranch()
+                );
     }
 }
